homework3/otw-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: otus-test-webapi-service
  namespace: homework
spec:
  type: ClusterIP
  selector:
    otw: v1
  ports:
  - protocol: TCP
    port: 80
    targetPort: 8000
