homework3/otw-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: otus-test-webapi-ingress
  namespace: homework
spec:
  ingressClassName: nginx
  rules:
    - host: otus-test-webapi.arch.homework
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: otus-test-webapi-service
                port:
                  number: 80
